# 42-Leafliction

./: .gitignore  Augmentation.py  Distribution.py  Transformation.py  augmentation.ipynb  autocomplete.sh  cli.py  distribution.ipynb  predict.py  pyproject.toml  signature.txt  test.ipynb  train.ipynb  train.py  transformation.ipynb
correction_leafliction/: en.scale (1).yml  en.scale (10).yml  en.scale (11).yml  en.scale (2).yml  en.scale (3).yml  en.scale (4).yml  en.scale (5).yml  en.scale (6).yml  en.scale (7).yml  en.scale (8).yml  en.scale (9).yml
entrypoints/: Augmentation.py  Distribution.py  Transformation.py  predict.py  train.py
leafy/: Augmentation.py  Transformation.py  __init__.py  augment_data.py  cli.py  loader.py  model.py  predict.py  test.py  train.py  trainloader.py  types.py
leafy/bullshit/: Augmentation.py  Distribution.py  Transformation.py  cli.py  loader.py  test.py  types.py  utils.py
lifi/: cli.py  predict.py  train.py
lifi/data/: Augmentinator.py  Distribution.py  Loader.py  Transformation.py  fix_jpg_extensions.py  labels.py
lifi/models/: __init__.py  basic.py
lifi/utils/: __init__.py  image.py
python_entrypoints/: Augmentation.py  Distribution.py  Predict.py  Train.py  Transformation.py
src/: Distribution.py  loader.py
src/leafy/: Distribution.py  loader.py
